<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_night"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/logo_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:adjustViewBounds="true"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/logo_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            app:srcCompat="@drawable/icon_3" />

        <TextView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="70dp"
            android:fontFamily="@font/teko_medium"
            android:text="@string/logo_text"
            android:textColor="@color/background_light"
            android:textSize="@dimen/font_size_tittle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_layout">

        <EditText
            android:id="@+id/input_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/input_url_hint"
            android:inputType="text"
            android:textColor="@color/background_light"
            android:textColorHint="@color/background_light"
            android:textSize="@dimen/font_size_middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/input_spinner_format"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/input_spinner_format"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/input_url"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/privacy_layout"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ads_banner_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/privacy_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_terms"
            android:textColorLink="@color/background_light"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/privacy_policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColorLink="@color/background_light"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/privacy_terms"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/input_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/input_request"
        android:textColor="@color/background_light"
        android:textSize="@dimen/font_size_middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout" />

    <FrameLayout
        android:id="@+id/frame_response"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/privacy_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_request"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ads_banner_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-6741442489323230/6164817002"/>

    <!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/ads_banner_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        app:adSize="BANNER"-->
<!--        app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>-->

</androidx.constraintlayout.widget.ConstraintLayout>